# learning_fastapi

./: README.md  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/users/: crud.py  schemas.py  views.py
core/: config.py  database.py
core/models/: __init__.py  base_model.py  user.py
