[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = "Учебный проект, в рамках которого я знакомлюсь с возможностями библиотеки FastAPI, а так же практикую навыки работы с системой управления миграциями alembic и работы с ORM SQlAlchemy"
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.6.3"}
alembic = "^1.13.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
